--- a/assteroid.css
+++ b/assteroid.css
@@ -1,6 +1,6 @@
 h1 {
 /*	background-color: white;*/
-	color: white/*rgb(41,38,100)*/;
+	color: white;
 	font-family: 'VT323', monospace;
 	text-align: center;
 	font-size: 570%;
