--- a/assteroid.css
+++ b/assteroid.css
@@ -34,15 +34,20 @@ body {
 	/*padding:50px;*/
 }
 
+
+.buttons {
+	margin-top: 0;
+}
+
 .button {
 		background-color: none;
 		border: none;
 		color: white;
-		padding: 15px 32px;
+		/*padding: 15px 32px;*/
 		text-align: center;
 		text-decoration: none;
 		display: inline-block;
-		margin: 4px 5px;
+		margin-bottom: 4px 5px;
 		cursor: pointer;
 }
 
