--- a/assteroid.css
+++ b/assteroid.css
@@ -23,7 +23,8 @@ p {
 	color: red;
 }
 body {
-	background-image: url("background.jpg");
+	background: url("background.jpg") no-repeat center center fixed;
+	background-size: cover;
 }
 #head {
 	width: 60%;
